[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steer-driven-runner"
version = "0.1.0"
description = "Autonomous AI development runner driven by steering documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ryosuke Mondo", email = "noreply@example.com"},
]
keywords = ["ai", "autonomous", "development", "steering", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "rich>=13.7.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
steer-run = "steer_driven_runner.cli:run"
steer-monitor = "steer_driven_runner.cli:monitor"
steer-feedback = "steer_driven_runner.cli:feedback"

[project.urls]
Homepage = "https://github.com/RyosukeMondo/steer-driven-runner"
Repository = "https://github.com/RyosukeMondo/steer-driven-runner"
Issues = "https://github.com/RyosukeMondo/steer-driven-runner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/steer_driven_runner"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=steer_driven_runner --cov-report=term-missing"
